--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -10,8 +10,18 @@
   	<description></description>
   	<servlet-class>com.servlet.SaveServlet</servlet-class>
   </servlet>
+  <servlet>
+  	<servlet-name>DeleteServlet</servlet-name>
+  	<display-name>DeleteServlet</display-name>
+  	<description></description>
+  	<servlet-class>com.servlet.DeleteServlet</servlet-class>
+  </servlet>
   <servlet-mapping>
   	<servlet-name>SaveServlet</servlet-name>
   	<url-pattern>/save-note</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+  	<servlet-name>DeleteServlet</servlet-name>
+  	<url-pattern>/delete-note</url-pattern>
   </servlet-mapping>
 </web-app>
